Disable Share extension item receiver if there is no app group.

EGTests don't have the application group entitlement.
Disable the Receiver in that case.

BUG=675412

Review-Url: https://codereview.chromium.org/2588683002
Cr-Commit-Position: refs/heads/master@{#439754}

Former-commit-id: 2d46b12dc7095b8aed4bc2c496b8dd9be3e78e0f